--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "@vercel/node": "^5.5.16",
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "@types/node": "^20.11.0",
     "tsx": "^4.7.0",
-    "@types/node": "^20.11.0"
+    "typescript": "^5.3.3"
   }
 }
