--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "terra",
   "version": "0.1.0",
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "tsx src/cli/from-url.ts",
     "build": "tsc -p tsconfig.json"
