--- a/package.json
+++ b/package.json
@@ -1,21 +1,4 @@
-{
-  "name": "terra",
-  "version": "0.1.0",
-  "type": "module",
-  "engines": {
-    "node": ">=20"
-  },
-  "scripts": {
-    "dev": "tsx src/cli/from-url.ts",
-    "build": "tsc -p tsconfig.json"
-  },
-  "dependencies": {
-    "@vercel/node": "^5.5.16",
-    "cheerio": "^1.0.0-rc.12"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
-  }
+"scripts": {
+  "dev": "tsx src/cli/from-url.ts",
+  "build": "echo \"skip build\""
 }
